@@ -1,0 +1,34 @@
+;;; error.scm -- Guile-PNG errors.
+
+;; Copyright (C) 2024 Artyom V. Poptsov <poptsov.artyom@gmail.com>
+;;
+;; This program is free software: you can redistribute it and/or modify
+;; it under the terms of the GNU General Public License as published by
+;; the Free Software Foundation, either version 3 of the License, or
+;; (at your option) any later version.
+;;
+;; The program is distributed in the hope that it will be useful,
+;; but WITHOUT ANY WARRANTY; without even the implied warranty of
+;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+;; GNU General Public License for more details.
+;;
+;; You should have received a copy of the GNU General Public License
+;; along with the program.  If not, see <http://www.gnu.org/licenses/>.
+
+
+;;; Commentary:
+
+;; This module contains procedures for throwing various Guile-PNG errors.
+
+
+;;; Code:
+
+(define-module (png core error)
+  #:export (png-error))
+
+
+
+(define (png-error message . args)
+  (apply throw 'png-error message args))
+
+;;; error.scm ends here.
